# 作成する実行可能ファイルの名前
bin_PROGRAMS = testris

# Cコンパイラへ渡すオプション(ここではコメントアウトしています)
# test_CFLAGS = -g

# C++コンパイラへ渡すオプション
testris_CXXFLAGS = -g

# 使用しているライブラリ(ここではコメントアウトしています)
# test_LDADD = -lm

# test生成に必要なソースコード
testris_SOURCES = main.cpp


### 以下はライブラリを作成する際の設定(オプション)

# インストールするヘッダファイル
#include_HEADERS = 

# インストールする際のライブラリ名
#lib_LIBRARIES = 

# Cコンパイラへ渡すオプション(ここではコメントアウトしています)
# libbook_a_CFLAGS = -g

# C++コンパイラへ渡すオプション
#libbook_a_CXXFLAGS = -g

# ライブラリ生成に必要なソースコード
#libbook_a_SOURCES = 